Do not use FluentFuture in RestconfTransaction.commit()
Noone is transforming this future, use a ListenableFuture instead.

Change-Id: Icb604d275b04c6a27b0cdcd4049926364cc5a198
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>